create source trasua

--- a/index.html
+++ b/index.html
@@ -1,11 +1,164 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./css/style.css">
+    <title>Document</title>
+
 </head>
+
 <body>
-<h1>hello work</h1>
+<div class="warrap">
+    <!--Start header-->
+    <header class="header">
+        <img src="./img/background-header.jpg" alt="" class="header__img">
+        <nav class="header__nav">
+            <ul class="header__nav-menu">
+
+                <!--                (li.menu__list)*4>a.menu__link-->
+
+                <li class="menu__list">
+                    <a href="" class="menu__link">Trang chủ</a>
+                </li>
+                <li class="menu__list">
+                    <a href="" class="menu__link">Giới thiệu</a>
+                </li>
+                <li class="menu__list">
+                    <a href="" class="menu__link">Liên hệ</a>
+                </li>
+                <li class="menu__list">
+                    <a href="" class="menu__link">Sử mệnh</a>
+                </li>
+                <li class="menu__list">
+                    <a href="" class="menu__link">Lịch sử</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <!--End header-->
+
+
+    <div class="banner">
+        <div class="banner__content_warrap">
+            <div class="banner__content">
+                <div class="content">
+                    <div class="heading">
+                        <h1 class="heading__text--primary">Rực rỡ sắc <br>vàng</h1>
+                        <hr class="heading__hr">
+                        <h3 class="heading__text--discription">
+                            Hoa hướng dương tượng <br> trưng cho sự đáng yêu, trung <br> thành và trường thọ.
+                            </h6>
+                    </div>
+
+                    <div class="search">
+                        <input type="text" placeholder="Tìm kiếm" class="search__input">
+                        <input type="submit" value="Tìm kiếm" class="search__submit">
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+    </div>
+
+    <div class="main">
+        <div class="layout">
+            <div class="layout__col1">
+                <div class="laypout__item">
+                    <div class="layout__item-img">
+                        <img src="img/huongduong1.webp" alt="">
+                    </div>
+                    <div class="layout__item-content">
+                        <p>BÓ HOA HƯỚNG DƯƠNG là một trong những món quà được nhiều người lựa chọn vì nó không chỉ
+                            đem lại vẻ đẹp mà còn thể hiện được tình cảm của người tặng đến người được tặng trong
+                            ngày đặc biệt của họ. Vẻ đẹp của hoa là một phần không thể thiếu trong cuộc sống chính
+                            vì lý do đó mà món quà từ hoa sẽ thật tinh tế và đầy ý nghĩa nếu bạn đang băn khoăn
+                            không biết nên tặng món quà ra sao hoặc muốn tặng thêm hoa đi kèm bên cạnh món quà
+                            chính.
+                            Tùy theo từng lứa tuổi, mối quan hệ… mà việc chọn BÓ HOA HƯỚNG DƯƠNG cũng sẽ khác nhau
+                            làm
+                            sao để đem đến món quà đẹp, trang nhã mà thể hiện được hết lời bạn muốn nhắn gửi thay vì
+                            các kiểu hoa đơn giản trên thị trường. Mỗi loại hoa lại mang trong mình những thông điệp
+                            riêng mà bạn nên tìm hiểu trước khi lựa chọn.</p>
+                    </div>
+                </div>
+                <hr>
+                <div class="laypout__item">
+                    <div class="layout__item-img">
+                        <img src="img/huongduong2.webp" alt="">
+                    </div>
+                    <div class="layout__item-content">
+                        <p>Những loài hoa đẹp là món quà mà mẹ thiên nhiên đã đem đến cho chúng ta. Người ta thường
+                            nói:
+                            “Vẻ đẹp rực rỡ của hoa là minh chứng cho vẻ đẹp của tình yêu, hoa có thể tàn úa nhưng
+                            tình
+                            yêu
+                            thì bất diệt”. Chính vì thế, món quà từ Bó hoa hướng dương luôn là sự lựa chọn hàng đầu
+                            khi
+                            bạn
+                            muốn bày tỏ những tình cảm đẹp nhất của mình đến cho một nửa còn lại. Một Bó hoa hướng
+                            dương
+                            đẹp
+                            luôn khiến cho mọi người hạnh phúc và cảm thấy đầy yêu thương. Và tùy theo từng dịp, sở
+                            thích và
+                            đối tượng mà việc lựa chọn các loại hoa trao tặng cũng khác nhau. Những Bó hoa hướng
+                            dương
+                            không
+                            chỉ là lời khen, lời chúc mà còn là lời yêu thương mà bạn trao tặng đến một nửa gắn kết
+                            trên
+                            thế
+                            giới của mình thay cho những xúc cảm ngọt ngào như vẻ đẹp của những đóa hoa rạng ngời.
+                            Bó
+                            hoa hướng
+                            dương - rực rỡ và rạng ngời với sắc vàng của hoa mặt trời. Trao yêu thương trong cánh
+                            hoa
+                            hướng dương
+                            rực rỡ.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="layout__col2">
+                <form action="" class="form">
+                    <div class="input">
+                        <label for="">Họ Tên</label>
+                        <input type="text" placeholder="Họ tên">
+                    </div>
+                    <div class="input">
+                        <label for="">Số Điện Thoại</label>
+                        <input type="text" placeholder="0909090909">
+                    </div>
+                    <div class="input">
+                        <label for="">Email</label>
+                        <input type="email" placeholder="your@gmail.com">
+                    </div>
+                    <div class="input">
+                        <label for="">Ngày</label>
+                        <input type="date">
+                    </div>
+                    <div class="input">
+                        <label for="">Ghi chú</label>
+                        <textarea name="" id="" cols="30" rows="10"></textarea>
+                    </div>
+                    <div class="input__submit">
+                        <input type="submit" value="Đăng">
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        <p class="footer">
+         kiettqpc06667
+        </p>
+    </footer>
+</div>
 
 </body>
+
 </html>
